updated method to mark duplicates
