# server/api/controllers/scrapper/scrapper.router.ts
@@ -3,4 +3,5 @@ import controller from './scrapper.controller'
 
 
 export default express.Router()
-    .get('/', controller.all);
+    .get('/', controller.all)
+    .get('/export-pipeline-to-csv', controller.exportPipeline);
